fix navbar overflow

--- a/public/styles/components/navbar.css
+++ b/public/styles/components/navbar.css
@@ -8,7 +8,7 @@ nav * {
 nav {
     padding: 0;
     margin: 0;
-    width: 100vw;
+    width: 100%;
 }
 
 nav li#username {
