--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -29,7 +29,6 @@ html,
 body {
     height: 100%;
     box-sizing: border-box;
-    overflow-x: hidden;
 }
 
 /* Projects / Tasks page */
